[package]
name = "rs2"
version = "0.1.1"
edition = "2021"
description = "Reed-Solomon FEC for CCSDS downlink decoding"
repository = "https://github.com/bmflynn/rs2"
license = "MIT OR Apache-2.0"
keywords = ["ccsds", "reed-solomon", "fec"]
categories = ["aerospace::space-protocols", "algorithms"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
